Improved test coverage and fixes